Utilize gang scheduling alongside service names to make magic happen (#33)
Signed-off-by: Clif Houck <me@clifhouck.com>