@@ -20,8 +20,10 @@ import io.armadaproject.armada.ArmadaClient
 import k8s.io.api.core.v1.generated._
 import k8s.io.apimachinery.pkg.api.resource.generated.Quantity
 import org.apache.spark.SparkContext
-import org.apache.spark.deploy.armada.Config.{ARMADA_CLUSTER_SELECTORS, 
-  ARMADA_EXECUTOR_TRACKER_POLLING_INTERVAL, ARMADA_EXECUTOR_TRACKER_TIMEOUT, transformSelectorsToMap}
+import org.apache.spark.deploy.armada.Config.{ARMADA_CLUSTER_SELECTORS,
+  ARMADA_EXECUTOR_TRACKER_POLLING_INTERVAL, ARMADA_EXECUTOR_TRACKER_TIMEOUT,
+  transformSelectorsToMap, GANG_SCHEDULING_NODE_UNIFORMITY_LABEL}
+import org.apache.spark.deploy.armada.submit.GangSchedulingAnnotations._
 import org.apache.spark.rpc.{RpcAddress, RpcCallContext}
 import org.apache.spark.scheduler.cluster.{CoarseGrainedSchedulerBackend, SchedulerBackendUtils}
 import org.apache.spark.scheduler.{ExecutorDecommission, TaskSchedulerImpl}
@@ -45,104 +47,15 @@ private[spark] class ArmadaClusterSchedulerBackend(
 
   private val initialExecutors = SchedulerBackendUtils.getInitialTargetExecutorNumber(conf)
   private val executorTracker = new ExecutorTracker(new SystemClock(), initialExecutors)
-
+  private val gangAnnotations = GetGangAnnotations("", initialExecutors, conf.get(GANG_SCHEDULING_NODE_UNIFORMITY_LABEL))
 
   override def applicationId(): String = {
     conf.getOption("spark.app.id").getOrElse(appId)
   }
 
-  // Convert the space-delimited "spark.executor.extraJavaOptions" into env vars that can be used by entrypoint.sh
-  private def javaOptEnvVars = {
-    // The executor's java opts are handled as env vars in the docker entrypoint.sh here:
-    // https://github.com/apache/spark/blob/v3.5.3/resource-managers/kubernetes/docker/src/main/dockerfiles/spark/entrypoint.sh#L44-L46
-
-    // entrypoint.sh then adds those to the jvm command line here:
-    // https://github.com/apache/spark/blob/v3.5.3/resource-managers/kubernetes/docker/src/main/dockerfiles/spark/entrypoint.sh#L96
-
-    val javaOpts = conf.get("spark.executor.extraJavaOptions").split(" ").toList :+
-      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-    javaOpts.zipWithIndex.map {
-      case(value: String, index) =>
-        EnvVar().withName("SPARK_JAVA_OPT_" + index).withValue(value)
-    }
-  }
-
-  private def submitJob(executorId: Int): Unit = {
-
-    val header = "local://"
-    val masterWithoutHeader = masterURL.substring(header.length)
-    val urlArray = masterWithoutHeader.split(":")
-    // Remove leading "/"'s
-    val host = if (urlArray(1).startsWith("/")) urlArray(1).substring(2) else urlArray(1)
-    val port = urlArray(2).toInt
-
-    val driverAddr = sys.env("SPARK_DRIVER_BIND_ADDRESS")
-
-
-    val driverURL = s"spark://CoarseGrainedScheduler@$driverAddr:7078"
-    val source = EnvVarSource().withFieldRef(ObjectFieldSelector()
-      .withApiVersion("v1").withFieldPath("status.podIP"))
-    val envVars = Seq(
-      EnvVar().withName("SPARK_EXECUTOR_ID").withValue(executorId.toString),
-      EnvVar().withName("SPARK_RESOURCE_PROFILE_ID").withValue("0"),
-      EnvVar().withName("SPARK_EXECUTOR_POD_NAME").withValue("test-pod-name"),
-      EnvVar().withName("SPARK_APPLICATION_ID").withValue("test_spark_app_id"),
-      EnvVar().withName("SPARK_EXECUTOR_CORES").withValue("1"),
-      EnvVar().withName("SPARK_EXECUTOR_MEMORY").withValue("512m"),
-      EnvVar().withName("SPARK_DRIVER_URL").withValue(driverURL),
-      EnvVar().withName("SPARK_EXECUTOR_POD_IP").withValueFrom(source)
-    )
-    val executorContainer = Container()
-      .withName("spark-executor")
-      .withImagePullPolicy("IfNotPresent")
-      .withImage(conf.get("spark.kubernetes.container.image"))
-      .withEnv(envVars ++ javaOptEnvVars)
-      .withCommand(Seq("/opt/entrypoint.sh"))
-      .withArgs(
-        Seq(
-          "executor"
-        )
-      )
-      .withResources(
-        ResourceRequirements(
-          limits = Map(
-            "memory" -> Quantity(Option("512Mi")),
-            "ephemeral-storage" -> Quantity(Option("512Mi")),
-            "cpu" -> Quantity(Option("100m"))
-          ),
-          requests = Map(
-            "memory" -> Quantity(Option("512Mi")),
-            "ephemeral-storage" -> Quantity(Option("512Mi")),
-            "cpu" -> Quantity(Option("100m"))
-          )
-        )
-      )
-
-
-    val podSpec = PodSpec()
-      .withTerminationGracePeriodSeconds(0)
-      .withRestartPolicy("Never")
-      .withContainers(Seq(executorContainer))
-      .withNodeSelector(transformSelectorsToMap(conf.get(ARMADA_CLUSTER_SELECTORS)))
-
-    val testJob = api.submit
-      .JobSubmitRequestItem()
-      .withPriority(0)
-      .withNamespace("default")
-      .withPodSpec(podSpec)
-
-    val client = ArmadaClient(host, port)
-    val jobSubmitResponse = client.submitJobs("test", "executor", Seq(testJob))
-
-    logInfo("Driver Job Submit Response")
-    for (respItem <- jobSubmitResponse.jobResponseItems) {
-      logInfo(s"JobID: ${respItem.jobId}  Error: ${respItem.error} ")
-
-    }
-  }
-
   override def start(): Unit = {
-    1 to initialExecutors foreach {j: Int => submitJob(j)}
+    // NOTE: armada-spark driver submits executors alongside driver.
+    // No need to start them here.
     executorTracker.start()
   }
 
